--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "kava",
   "version": "1.0.0",
+  "engines": {
+    "node": ">=14.0.0",
+    "npm": ">=6.0.0"
+  },
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^4.1.0",
-    "gulp-notify": "^3.2.0",
-    "gulp-plumber": "^1.2.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0",
-    "gulp-rtlcss": "^1.2.0",
-    "gulp-checktextdomain": "^2.2.0",
-    "gulp-livereload": "^4.0.1"
+    "gulp": "^5.0.1",
+    "gulp-autoprefixer": "^10.0.0",
+    "gulp-notify": "^5.0.0",
+    "gulp-plumber": "^1.2.1",
+    "gulp-rename": "^2.1.0",
+    "sass": "^1.94.2",
+    "gulp-sass": "^6.0.1",
+    "gulp-rtlcss": "^2.0.0",
+    "gulp-checktextdomain": "^2.3.0",
+    "gulp-livereload": "^4.0.2"
   }
 }
