--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
   "devDependencies": {
     "gulp": "^5.0.1",
     "gulp-autoprefixer": "^10.0.0",
+    "gulp-checktextdomain": "^2.3.0",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-livereload": "^4.0.2",
     "gulp-notify": "^5.0.0",
     "gulp-plumber": "^1.2.1",
     "gulp-rename": "^2.1.0",
-    "sass": "^1.94.2",
-    "gulp-sass": "^6.0.1",
     "gulp-rtlcss": "^2.0.0",
-    "gulp-checktextdomain": "^2.3.0",
-    "gulp-livereload": "^4.0.2"
+    "gulp-sass": "^6.0.1",
+    "gulp-sourcemaps": "^3.0.0",
+    "sass": "^1.94.2"
   }
 }
