--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "gulp-rtlcss": "^2.0.0",
     "gulp-sass": "^6.0.1",
     "gulp-sourcemaps": "^3.0.0",
-    "sass": "^1.94.2"
+    "sass": "^1.94.2",
+    "stylelint": "^16.26.0",
+    "stylelint-config-recommended-scss": "^16.0.2",
+    "stylelint-config-standard": "^39.0.1",
+    "stylelint-scss": "^6.12.1"
   }
 }
