--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "npm": ">=11.0.0"
   },
   "devDependencies": {
+    "analyze-css": "^2.4.20",
     "gulp": "^5.0.1",
     "gulp-autoprefixer": "^10.0.0",
     "gulp-checktextdomain": "^2.3.0",
@@ -13,10 +14,12 @@
     "gulp-livereload": "^4.0.2",
     "gulp-notify": "^5.0.0",
     "gulp-plumber": "^1.2.1",
+    "gulp-postcss": "^10.0.0",
     "gulp-rename": "^2.1.0",
     "gulp-rtlcss": "^2.0.0",
     "gulp-sass": "^6.0.1",
     "gulp-sourcemaps": "^3.0.0",
+    "postcss-preset-env": "^10.4.0",
     "sass": "^1.94.2",
     "stylelint": "^16.26.0",
     "stylelint-config-recommended-scss": "^16.0.2",
