--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-notify": "^5.0.0",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^10.0.0",
+    "gulp-purgecss": "^7.0.2",
     "gulp-rename": "^2.1.0",
     "gulp-rtlcss": "^2.0.0",
     "gulp-sass": "^6.0.1",
